tests/files/type_checker_tests/should_pass/250.cmdr
//Test that lambdas type check
add = fn (): int -> {
    a = 3 + 4;
    return a;
};
add();
x = add();
