tests/files/type_checker_tests/should_fail/063.cmdr
//Should fail if variable already exists
x: int = 3;
foo = fn (x: float): int -> {
    return x;
};
